| Summary: | ASTERISK-27852: cli: "manager show settings" mislabels HTTP timeout as being minutes. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2018-05-11 12:26:04 | Date Closed: | 2018-05-16 09:41:56 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 13.20.0 GIT 15.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | "manager show settings" prints the HTTP timeout value but says it is minutes when it is actually seconds. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-05-11 12:26:05.082-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-05-16 09:41:57.266-0500 Change 8980 merged by Jenkins2: cli: Display correct unit for HTTP timeout in "manager show settings". [https://gerrit.asterisk.org/8980|https://gerrit.asterisk.org/8980] By: Friendly Automation (friendly-automation) 2018-05-16 10:04:16.524-0500 Change 8981 merged by Jenkins2: cli: Display correct unit for HTTP timeout in "manager show settings". [https://gerrit.asterisk.org/8981|https://gerrit.asterisk.org/8981] By: Friendly Automation (friendly-automation) 2018-05-16 13:57:45.929-0500 Change 8982 merged by Joshua Colp: cli: Display correct unit for HTTP timeout in "manager show settings". [https://gerrit.asterisk.org/8982|https://gerrit.asterisk.org/8982] | ||