cli: Display correct unit for HTTP timeout in "manager show settings".

HTTP timeout is in seconds, not minutes.

ASTERISK-27852 #close

Change-Id: Ie6640835cb07307555741f9b559c2eb876d9343e